Remove spaces from response example on landing page.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
   <h2>Example:</h2>
   <p class="lead"><strong>GET:</strong> <code>/5,3,7,2</code></p>
-  <p class="lead"><strong>Response:</strong> <code>[2, 3, 5, 7]</code></p>
+  <p class="lead"><strong>Response:</strong> <code>[2,3,5,7]</code></p>
 </div>
 </body>
 </html>
